--- a/public/chat.html
+++ b/public/chat.html
@@ -39,15 +39,10 @@
                             <p id="room-id" class="room-id"></p>
                         </div>
                         <div class="switch-toggle">
-                            <div class="main-switch"> 
-                            <label id="switch" class="switch">
-                                <input type="checkbox" onchange="toggleTheme()" id="slide">
-                                <span class="slide Round"></span>
-                            </label>
-                            </div>
+                            
                             <a id='leave-btn'><i class="fas fa-times-circle"></i></a>
                             <div class="toggle">
-                                <i class="fas fa-align-justify"></i>
+                                <i id="toggle-nav" class="fas fa-align-justify"></i>
                             </div>
                         </div>
                     </header>
